--- a/jurorIdentifier.html
+++ b/jurorIdentifier.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="step3" style="display: none;">
-            We will begin the process for registering <span id="juryCountDisplay"></span>. Please place first juror at the computer.
+            We will begin the process for registering <span id="juryCountDisplay"></span> jurors. Please place first juror at the computer.
             <button onclick="nextStep(4)">Next</button>
         </div>
 
@@ -31,7 +31,10 @@
             Please enter a secret message. This message should be private to you and not easily guessable by someone who knows you.
             <input type="text" id="secretMessage" maxlength="10">
             <div id="message"></div>
-            <button onclick="storeSecretMessage()">Next</button>
+            <button onclick="generateSecretKeys()">Generate Secret Keys</button>
+            <div id="secretkeys"></div>
+            <button style="display: none;" id="clearMessageButton" onclick="clearMessage()">Next</button>
+            <button style="display: none;" id="final" onclick="clearMessage()">Finalise Identification Round</button>
         </div>
     </div>
 
