Created new files for voting.

--- a/caseVoting.html
+++ b/caseVoting.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="index.html"><img src="assets/images/semaphorecourtlogo.png" alt="Logo" id="logo"></a>
-        <a href="identifierGeneration.html" class="nav-link">Identifier Generation</a>
+        <a href="jurorIdentifier.html" class="nav-link">Identifier Generation</a>
     </nav>
     
     <div id="search-section">
@@ -20,8 +20,8 @@
     <section id="blog-grid">
     
         <article class="blog-entry">
-            <img src="assets/images/dummyimage.jpg" alt="Dummy Image">
-            <h2>Case Name 1</h2>
+            <img href="./assets/Case1.html" src="assets/images/dummyimage.jpg" alt="Dummy Image">
+            <h2 href="./assets/Case1.html">Case Name 1</h2>
             <p>Case Ref #: 001</p>
             <p>Date: 01/01/2023</p>
         </article>
