Minor style bugs improved for Case1 boilerplate html.

--- a/assets/Case1.html
+++ b/assets/Case1.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Case</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <nav>
         <a href="index.html" class="logo">
-            <img src="assets/images/semaphorecourtlogo.jpg" alt="Logo" class="logo-image">
+            <img src="./images/semaphorecourtlogo.png" alt="Logo" class="logo-image">
         </a>
         <a href="../jurorIdentifier.html">Identifier Generation</a>
     </nav>
     <main>
         <article>
-            <img src="assets/images/dummyimage.jpg" alt="Dummy Image">
+            <img src="./images/dummyimage.jpg" alt="Dummy Image">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </article>
         <aside>
