--- a/caseVoting.html
+++ b/caseVoting.html
@@ -20,8 +20,10 @@
     <section id="blog-grid">
     
         <article class="blog-entry">
-            <img href="./assets/Case1.html" src="assets/images/dummyimage.jpg" alt="Dummy Image">
-            <h2 href="./assets/Case1.html">Case Name 1</h2>
+            <a href="./assets/Case1.html">
+            <img  src="assets/images/dummyimage.jpg" alt="Dummy Image">
+            <h2>Case Name 1</h2>
+            </a>
             <p>Case Ref #: 001</p>
             <p>Date: 01/01/2023</p>
         </article>
