--- a/index.html
+++ b/index.html
@@ -7,11 +7,54 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Semaphore Court</h1>
     <nav>
-        <a href="jurorGroupGeneration.html">Jury Group Generation</a>
-        <a href="jurorIdentifier.html">Juror Identifier Generator</a>
-        <a href="caseVoting.html">Voting</a>
+        <img src="./assets/images/semaphorecourtlogo.png" alt="Logo" id="logo">
+        <a href="jurorIdentifier.html" class="nav-button">Juror Identifier Generator</a>
+        <a href="caseVoting.html" class="nav-button">Voting</a>
+        <a href="jurorGroupGeneration.html" class="nav-button">Jury Group Generation</a>
     </nav>
+
+    <main>
+        <div class="case-details">
+            <img src="./assets/images/background.jpg" alt="Legal theme image" class="case-image">
+            <div class="case-description">
+                <h1>Justice with Transparency</h1>
+                <p>A more private, safe and transparent jury voting process</p>
+            </div>
+        </div>
+        <div class="charges-section">
+            <article class="blog-entry">
+                <a href="./assets/Case1.html">
+                    <img src="assets/images/dummyimage.jpg" alt="Dummy Image">
+                    <h2>Smith v. Facebook</h2>
+                </a>
+                <p>Case Ref #: 001</p>
+                <p>Date: 01/01/2021</p>
+            </article>
+            <article class="blog-entry">
+                <a href="./assets/Case1.html">
+                    <img src="assets/images/dummyimage.jpg" alt="Dummy Image">
+                    <h2>Donald Trump v. USA</h2>
+                </a>
+                <p>Case Ref #: 002</p>
+                <p>Date: 01/01/2022</p>
+            </article>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="contact-details">
+                <p><strong>Phone:</strong> (123) 456-7890</p>
+                <p><strong>Address:</strong> 123 Semaphore Court St., Legal City, 12345</p>
+            </div>
+            <div class="footer-links">
+                <a href="about.html">About</a>
+                <span>|</span>
+                <a href="terms-and-conditions.html">Terms & Conditions</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
