--- a/jurorIdentifier.html
+++ b/jurorIdentifier.html
@@ -8,36 +8,36 @@
 </head>
 <body>
     <script type="module" src="/dist/jurorIdentifier.js"></script>
-    <div id="formContainer">
-        <div id="step1">
-            Please enter the case name and reference number.
-            <input type="text" id="caseName">
-            <input type="text" id="referenceNumber">
-            <button onclick="nextStep(2)">Next</button>
+
+    <div class="form-wrapper">
+        <div class="form-step" id="step1">
+            <p>Please enter the case name and reference number.</p>
+            <input type="text" id="caseName" placeholder="Case Name">
+            <input type="text" id="referenceNumber" placeholder="Reference Number">
+            <button class="next-btn" onclick="nextStep(2)">Next</button>
         </div>
 
-        <div id="step2" style="display: none;">
-            The first question is: How many jurors are on the case jury?
+        <div class="form-step" id="step2" style="display: none;">
+            <p>The first question is: How many jurors are on the case jury?</p>
             <input type="number" id="juryCount">
-            <button onclick="nextStep(3)">Next</button>
+            <button class="next-btn" onclick="nextStep(3)">Next</button>
         </div>
 
-        <div id="step3" style="display: none;">
-            We will begin the process for registering <span id="juryCountDisplay"></span> jurors. Please place first juror at the computer.
-            <button onclick="nextStep(4)">Next</button>
+        <div class="form-step" id="step3" style="display: none;">
+            <p>We will begin the process for registering <span id="juryCountDisplay"></span> jurors. Please place first juror at the computer.</p>
+            <button class="next-btn" onclick="nextStep(4)">Next</button>
         </div>
 
-        <div id="step4" style="display: none;">
-            Please enter a secret message. This message should be private to you and not easily guessable by someone who knows you.
+        <div class="form-step" id="step4" style="display: none;">
+            <p>Please enter a secret message. This message should be private to you and not easily guessable by someone who knows you.</p>
             <input type="text" id="secretMessage" maxlength="10">
             <div id="message"></div>
-            <button onclick="generateSecretKeys()">Generate Secret Keys</button>
+            <button class="generate-btn" onclick="generateSecretKeys()">Generate Secret Keys</button>
             <div id="secretkeys"></div>
-            <button style="display: none;" id="clearMessageButton" onclick="clearMessage()">Next</button>
-            <button style="display: none;" id="final" onclick="clearMessage()">Finalise Identification Round</button>
+            <button class="next-btn" id="clearMessageButton" onclick="clearMessage()" style="display: none;">Next</button>
+            <button class="final-btn" id="final" onclick="clearMessage()" style="display: none;">Finalise Identification Round</button>
         </div>
     </div>
 
 </body>
 </html>
-    
