all other changes

--- a/assets/Case1.html
+++ b/assets/Case1.html
@@ -53,7 +53,7 @@
         </aside>
     </main>
     
-    
-    <script src="../dist/voting.js"></script>
+    <!--  insert module???? -->
+    <script type="module" src="../dist/voting.js"></script> 
 </body>
 </html>
