--- a/votingApp.html
+++ b/votingApp.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+    <script type="module" src="./dist/app.js"></script>
     <nav>
         <a href="../index.html"><img src="./images/semaphorecourtlogo.png" alt="Logo" id="logo"></a>
     </nav>
 
-    
+    <h1 id="caseTitle">Case Name Placeholder</h1>
+
 
 </body>
 </html>>
