Dependency changes, inclusion of Zustand as a state package manager.

--- a/assets/Case1.html
+++ b/assets/Case1.html
@@ -54,6 +54,6 @@
     </main>
     
     <!--  insert module???? -->
-    <script type="module" src="../dist/voting.js"></script> 
+    <script src="../dist/voting.js"></script> 
 </body>
 </html>
