--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
         <img src="./assets/images/semaphorecourtlogo.png" alt="Logo" id="logo">
         <a href="jurorIdentifier.html" class="nav-button">Juror Identifier Generator</a>
-        <a href="caseVoting.html" class="nav-button">Voting</a>
-        <a href="jurorGroupGeneration.html" class="nav-button">Jury Group Generation</a>
+        <a href="cases.html" class="nav-button">Voting</a>
+        <a href="./groupGenerator.html" class="nav-button">Jury Group Generation</a>
     </nav>
 
     <main>
