--- a/jurorIdentifier.html
+++ b/jurorIdentifier.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <script type="module" src="/dist/jurorIdentifier.js"></script>
+    <script type="module" src="./dist/jurorIdentifier.js"></script>
 
     <div class="form-wrapper">
         <div class="form-step" id="step1">
