Change name from voting.js to caseVoting.js to differentiate from vote.js.

--- a/assets/Case1.html
+++ b/assets/Case1.html
@@ -54,6 +54,6 @@
     </main>
     
     <!--  insert module???? -->
-    <script src="../dist/voting.js"></script> 
+    <script src="../dist/caseVoting.js"></script> 
 </body>
 </html>
